# vcf-filter

./: CMakeLists.txt  README.md
libvcf/: CMakeLists.txt  utilities.cpp  utilities.h  variant.cpp  variant.h  variantcollection.cpp  variantcollection.h
main/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt
test/testvcf/: CMakeLists.txt  sample_vcf.h  testvcf.cpp  testvcf.h
